--- a/src/Deck.css
+++ b/src/Deck.css
@@ -1,3 +1,33 @@
+.Deck {
+    font-family: 'Slabo 27px', serif;
+}
 .Deck-cardarea{
     margin-top: 80px;
+}
+.Deck-title{
+    color: azure;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+.subtitle{
+    font-size: 20px;
+}
+
+.Deck-btn {
+    background: none;
+    border: 2px solid;
+    outline: none;
+    font: inherit;
+    margin: 0.5em;
+    padding: 1em 2em;
+    color: #009688;
+    transition: 0.25s;
+}
+
+.Deck-btn:hover {
+    border-color: #4caf50;
+    color: white;
+    box-shadow: inset 0 0 0 2em #4caf50;
 }
